--- a/airmonitor.css
+++ b/airmonitor.css
@@ -116,9 +116,6 @@
 
 
 
-
-
-
 .banner-text {
     display: flex;
     flex-direction: column-reverse;
@@ -226,6 +223,11 @@
     .indoor-air-monitor-right img{
         width: 30px
     }
+    .air-monitor-banner{
+        margin-bottom: 179px;
+        /* padding-top: 20px; */
+    }
+    
 }
 
 
@@ -655,7 +657,9 @@
     }
 
     .center-image {
-        width: 400px; 
+        width: 51%; 
+        top: 0%;
+        left: 1%;
     }
     .pm25-left-content h3, .pm25-right-content h3{
         font-size: 17px;
@@ -682,6 +686,19 @@
     left: 0;
     z-index: -1;
     animation: floatWave 3s infinite ease-in-out;
+  }
+  @media (max-width: 400px) {
+    .wave-background {
+        height: 80px; 
+    }
+    .wave-background img {
+        top: 29px;
+        width: 100%;
+        height: 100vh; 
+    }
+    .air-monitor-content{
+        top: 50px;
+    }
   }
   
 @keyframes floatWave {
