--- a/style.css
+++ b/style.css
@@ -2065,3 +2065,12 @@ tr:hover {
 
 
 
+#contact-btn{
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
