--- a/airmonitor.css
+++ b/airmonitor.css
@@ -403,7 +403,7 @@
 
 
 .pollutants {
-    padding-top: 150px;
+    padding-top: 50px;
     padding-bottom: 80px;
     margin: 0 auto;
     width: 90%;
@@ -985,4 +985,148 @@
     font-weight: 700;
     color: #2e46ca;
     
+}
+
+
+
+.iaqms-container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding-top: 100px;
+    padding-bottom: 70px;
+    /* width: 80%; */
+    margin: auto;
+    /* background-color: #dceef8; */
+}
+
+.iaqms-content{
+    width: 80%;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 10px;
+    /* background-color: white; */
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    padding: 50px;
+    background-color: rgb(224, 243, 250);
+    /* color: white; */
+}
+.iaqms-content h2{
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.iaqms-content p{
+    font-size: 1.2rem;
+    line-height: 30px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: black;
+}
+
+
+
+.wrapper {
+  display: flex;
+  /* flex-direction: column; */
+  /* width: 90%; */
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 50px 0;
+  margin: auto;
+  background-color: rgb(218, 239, 243);
+}
+.wrapper-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.wrapper-container h2{
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #0f172a;
+}
+.card-subtitle-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+
+.card {
+  width: 300px;
+  height: 360px;
+  border-radius: 15px;
+  padding: 1.5rem;
+  background: white;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: 0.4s ease-out;
+  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+
+.card:hover {
+  transform: translateY(20px);
+}
+
+.card:hover::before {
+  opacity: 1;
+}
+
+.card:hover .info {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  transition: 0.5s;
+  opacity: 0;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 15px;
+}
+
+.info {
+  position: relative;
+  z-index: 3;
+  color: white;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s;
+}
+
+.info h1 {
+  margin: 0;
+  color: white;
+}
+
+.info p {
+  letter-spacing: 1px;
+  font-size: 20px;
+  margin-top: 8px;
+  color: white;
+  font-weight: 300;
 }
