--- a/touch.css
+++ b/touch.css
@@ -98,15 +98,16 @@
     /* flex-direction: column; */
     align-items: center;
     width: 75%;
-    margin: 100px auto 60px;
+    /* margin: 100px auto 60px; */
+    margin: 104px auto 0px;
     gap: 50px;
 }
 
 /* Lottie animation as overlay */
 .contact_container > dotlottie-player {
     position: absolute;
-    top: 20%;
-    left: 31%;
+    top: 25%;
+    left: 26%;
     transform: translate(-50%, -50%);
     z-index: 10; /* Ensure it stays above other content */
     opacity: 0.6 ; /* Make it semi-transparent so content is visible */
@@ -134,7 +135,7 @@
 }
 
 #contact-form-container {
-    background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent */
+    background-color: rgb(169 226 248 / 90%); /* Slightly transparent */
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -163,7 +164,7 @@
 
 .contact_info h2{
     font-size: 40px;
-    font-weight: 300;
+    font-weight: 600;
     color: #0a0a0a;
     /* margin-bottom: 20px; */
 }
