--- a/airmonitor.css
+++ b/airmonitor.css
@@ -547,6 +547,7 @@
 .pm25-container{
     
     background-color: #dceef8;
+    padding-bottom: 35px;
 }
 
 
@@ -557,7 +558,7 @@
     justify-content: center;
     align-content: center;
     padding-top: 100px;
-    padding-bottom: 150px;
+    padding-bottom: 90px;
     width: 80%;
     margin: auto;
     
@@ -1129,4 +1130,67 @@
   margin-top: 8px;
   color: white;
   font-weight: 300;
+}
+
+
+.technical-container {
+  /* max-width: 800px; */
+  margin: auto;
+  width: 80%;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin: 50px auto 50px;
+}
+
+.technical-container h2 {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 2.3rem;
+  font-weight: 500;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead {
+  background-color: #007acc;
+  color: white;
+}
+
+th, td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+
+tr:hover {
+  background-color: #f1f1f1;
+}
+
+.connectivity-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+}
+.connectivity-container img {
+  width: 80%;
+  height: auto;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+}
+.connectivity-container h2 {
+  font-size: 3rem;
+  font-weight: 400;
+  color: #080808;
+  margin-bottom: 20px;
 }
