--- a/contact-us.css
+++ b/contact-us.css
@@ -20,8 +20,8 @@
     top: 74px;
     max-width: 100%;
     height: 676px;
-    opacity: 0.9;
-    margin-bottom: 70px;
+    /* opacity: 0.9; */
+    /* margin-bottom: 70px; */
   }
   
 .tecsage_image_container::after {
@@ -191,7 +191,7 @@
 }
 .tecsage_value p{
     color: rgb(58, 57, 57);
-    font-weight: 400;
+    font-weight: 4 00;
     line-height: 25px;
     font-size: 22px;
     width: 80%;
@@ -828,4 +828,8 @@ textarea {
 
   .swiper-pagination-bullet-active {
     background: #007aff;
+  }
+  #sw-2{
+    width: 100%;
+    object-fit: cover;
   }
