--- a/style.css
+++ b/style.css
@@ -1484,7 +1484,7 @@ tr:hover {
   gap: 50px; 
   flex-wrap: wrap; 
   padding: 2rem 1rem;
-  padding-top: 5rem !important;
+  padding-top: 6rem !important;
 }
 .text-section {
   flex: 1; 
@@ -1507,14 +1507,11 @@ tr:hover {
   font-family: "Figtree", sans-serif;
 }
 .image-section img {
-    width: 56%;
+    width: 88%;
     height: auto;
 }
 .image-section {
-  flex: 1; /* Take up available space */
-  display: flex;
-  /* justify-content: center; */
-  align-items: center;
+  width: 62%;
 }
 
 
@@ -2012,11 +2009,7 @@ tr:hover {
 
 /* Tablet adjustments (576px - 768px) */
 @media (min-width: 576px) and (max-width: 768px) {
-  .containers {
-    /* flex-direction: column; */
-    height: auto;
-    padding: 2rem;
-  }
+  
   
   .text-section h1 {
     font-size: 2.2rem;
@@ -2073,4 +2066,20 @@ tr:hover {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
+}
+
+
+@media (max-width: 768px) {
+  .text-section {
+    width: 100%;
+    /* font-size: 0.9rem; */
+  }
+}
+@media (max-width: 576px) {
+  .containers {
+    display: flex;
+    flex-direction: column;
+    /* font-size: 0.8rem; */
+  }
+  
 }
