--- a/About-us.css
+++ b/About-us.css
@@ -4,6 +4,9 @@
     padding: 0;
     font-family: 'Figtree', sans-serif;
 }
+/* body{
+     overflow-x: hidden;
+} */
 
 
 .tecsage_image_container {
@@ -19,8 +22,9 @@
     position: relative;
     width: 100%;
     top: 74px;
-    max-width: 100%;
+    /* max-width: 100%; */
     height: 676px;
+    overflow: hidden;
     /* opacity: 0.9; */
     /* margin-bottom: 70px; */
   }
@@ -45,11 +49,11 @@
   
   .carousel-image {
     width: 100%;
-    height: auto;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    object-fit: contain;
+    object-fit: cover;
     transition: opacity 0.5s;
     /* opacity: 0; */
   }
@@ -142,6 +146,7 @@
     flex-direction: column;
     align-items: center; 
     justify-content: center; 
+    overflow-x: hidden;
 }    
 .tecsage_features h3 {
     font-size: 3em;
@@ -258,6 +263,9 @@
     transition: transform 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
     text-align: center;
 } */
+ .services_grid p{
+    font-size: 22px;
+ }
 .service_card1 {
     background: white;
     padding: 20px ;
