--- a/style.css
+++ b/style.css
@@ -14,7 +14,31 @@ html,body{
     height: 100%;
     width: 100%;
     scroll-behavior: smooth;
+    /* cursor: none; */
 }
+.cursor-dot{
+  width: 5px;
+  height: 5px;
+  background-color: white;
+  z-index: 1000;
+}
+.cursor-outline{
+  width: 30px;
+  height: 30px;
+  border: 2px solid hsla(0, 0%, 100%, 0.5);
+  z-index: 1000;
+}
+.cursor-dot,
+.cursor-outline{
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 1000;
+}
+
 
  .navbar {
     display: flex;
@@ -1329,7 +1353,7 @@ tr:hover {
 }
 
 .intro {
-  height: 100vh; /* Full height of the screen */
+  height: 80vh; /* Full height of the screen */
   background-image: url('assets/dotted_bg_1.jpg'); /* Replace with your image URL */
   /* background-size: cover;
   background-position: center; */
@@ -1398,51 +1422,64 @@ tr:hover {
 /* Hero section */
 .containers_section{
   /* background-image: url('assets/dotted_bg_1.jpg'); */
-  background-image: url('assets/Blue\ Minimalist\ Desktop\ Wallpaper\ \(2\).png');
+  /* background-image: url('assets/Blue\ Minimalist\ Desktop\ Wallpaper\ \(2\).png'); */
+      background-color: rgb(2, 26, 58);
   margin-top: 4rem;
   display: flex;
-  flex-direction: column;
+   padding-bottom: 27rem;
+  /* flex-direction: column; */
 }
 
 .containers {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column;
   justify-content: space-between; 
-  align-items: center;
+  align-items: center; */
   width: 90%;
   margin: auto;
-  height: 90vh;
+  height: 162vh;
   gap: 50px; 
   flex-wrap: wrap; 
   padding: 2rem 1rem;
   padding-top: 6rem !important;
+  
 }
 .text-section {
   flex: 1; 
   text-align: left;
-  width: 40%;
+  width: 100%;
 }
 .text-section h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #333;
+  font-size: 8rem;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
   text-align: left;
   font-family: "Figtree", sans-serif;
 }
 .text-section p {
+  width: 50%;
   margin-top: 50px;
-  font-size: 1.5rem;
-  color: #00375f;
+  font-size: 1.8rem;
+  color: #ffffff;
   margin-bottom: 20px;
-  font-weight: 600;
+  font-weight: 400;
   font-family: "Figtree", sans-serif;
 }
 .image-section img {
-    width: 88%;
+    width: 100%;
     height: auto;
+   
+}
+#a2{
+  
+  width: 500px;
+  height: 250px;
 }
 .image-section {
-  width: 62%;
+  display: flex;
+  gap: 30px;
+  width: 100%;
+  margin-top: 100px;
 }
 
 
@@ -1456,17 +1493,18 @@ tr:hover {
   margin-top: 10px;
   background-color: #007bff;
   /* color: white; */
-  padding: 12px 30px;
+  padding: 12px 50px;
   font-size: 1.1rem;
   font-weight: 500;
   border: none;
-  border-radius: 5px;
+  border-radius: 45px;
   cursor: pointer;
   text-decoration: none;
 }
 .btn-primary a{
   color: white;
   text-decoration: none;
+  font-weight: 300;
 }
 
 .btn-primary:hover {
