--- a/style.css
+++ b/style.css
@@ -15,30 +15,27 @@ html,body{
     width: 100%;
     scroll-behavior: smooth;
     /* cursor: none; */
-}
-.cursor-dot{
-  width: 5px;
-  height: 5px;
-  background-color: white;
-  z-index: 1000;
-}
-.cursor-outline{
-  width: 30px;
-  height: 30px;
-  border: 2px solid hsla(0, 0%, 100%, 0.5);
-  z-index: 1000;
-}
-.cursor-dot,
-.cursor-outline{
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  pointer-events: none;
-  z-index: 1000;
+    
 }
 
+#cursor{
+  height: 20px;
+  width: 20px;
+  background-color: white;
+  border-radius: 50%;
+  position: fixed;
+   left: 0;
+  top: 0;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: difference;
+  z-index: 10000;
+   pointer-events: none;
+    /* Blur Effect */
+  /* box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.5); */
+  
+  /* Full blur */
+  /* filter: blur(1px); */
+}
 
  .navbar {
     display: flex;
@@ -877,16 +874,19 @@ tr:hover {
   margin-top: 2rem;
   line-height: 2rem;
   font-size: 1.2rem;
+  color: #272726;
 }
 .feature-card2-left p{
   line-height: 2rem;
   font-size: 1.2rem;
   margin-top: 2rem;
+  color: #272726;
 }
 .feature-card3-left p{
   line-height: 2.2rem;
   font-size: 1.2rem;
   margin-top: 2rem;
+  color: #272726;
 }
 .feature-card1-right img{
    /* max-width: 50%;  */
@@ -1426,8 +1426,8 @@ tr:hover {
       background-color: rgb(2, 26, 58);
   margin-top: 4rem;
   display: flex;
-   padding-bottom: 27rem;
-  /* flex-direction: column; */
+   /* padding-bottom: 27rem; */
+  flex-direction: column;
 }
 
 .containers {
@@ -1437,7 +1437,7 @@ tr:hover {
   align-items: center; */
   width: 90%;
   margin: auto;
-  height: 162vh;
+  /* height: 162vh; */
   gap: 50px; 
   flex-wrap: wrap; 
   padding: 2rem 1rem;
@@ -1572,6 +1572,59 @@ tr:hover {
   right: 0;
   top: 0;
   transform: rotate(180deg);
+}
+.mission-section{
+  width: 70%;
+  padding-top: 150px;
+  padding-bottom: 50px;
+}
+.mission-section h2 {
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.mission-section p {
+  font-size: 1.7rem;
+  font-weight: 400;
+  word-spacing: 2px;
+  color: #bbdaec;
+  line-height: 1.3;
+  margin-bottom: 30px;
+  padding-top: 30px;
+}
+.mission-section h2,p{
+  color: white;
+}
+
+#know-more-link{
+  word-spacing: 5px;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: rgb(138, 194, 240);
+  text-decoration: none;
+    background:
+    linear-gradient(
+      to right,
+      rgb(144, 176, 187),
+      rgb(151, 185, 202)
+    ),
+    linear-gradient(
+      to right,
+      /* rgb(11, 204, 218), */
+      rgb(68, 140, 223),
+      rgb(68, 164, 228),
+      rgba(0, 100, 200, 1)
+  );
+  background-size: 100% 3px, 0 3px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+  /* padding: 10px; */
+  padding-bottom: 5px;
+}
+#know-more-link:hover {
+  background-size: 0 3px, 100% 3px;
 }
 
 
@@ -1838,7 +1891,7 @@ tr:hover {
     padding-bottom: 2rem;
    
   }
-  
+ 
   .feature-card1,
   .feature-card2,
   .feature-card3 {
