--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html,body{
     
 }
 
-#cursor{
+/* #cursor{
   height: 20px;
   width: 20px;
   background-color: white;
@@ -30,12 +30,7 @@ html,body{
   mix-blend-mode: difference;
   z-index: 10000;
    pointer-events: none;
-    /* Blur Effect */
-  /* box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.5); */
-  
-  /* Full blur */
-  /* filter: blur(1px); */
-}
+} */
 
  .navbar {
     display: flex;
